# tetra-plug-template

./: README.rst  cookiecutter.json
tetra_{{cookiecutter.package_slug}}/: AUTHORS.rst  Makefile  README.rst  pyproject.toml
tetra_{{cookiecutter.package_slug}}/tetra_{{cookiecutter.package_slug}}/: __init__.py
tetra_{{cookiecutter.package_slug}}/tetra_{{cookiecutter.package_slug}}/notes/{{cookiecutter.note_slug}}/: __init__.py  echo.py  play.py  spec.py  test.py  tone.py
